# ArtForge

./: .augmentignore  .env.example  .gitignore  DEPLOYMENT.md  README.md  alembic.ini  art-forge.service  nginx-art-config.txt  pyproject.toml
alembic/: env.py
alembic/versions/: 899af15a5fd2_initial_migration.py
scripts/server/: run_server.py
src/art_forge/: __init__.py  auth.py  config.py  database.py  main.py
src/art_forge/models/: __init__.py  artwork.py  comment.py  series.py  spark.py  tag.py  user.py
src/art_forge/routes/: __init__.py  artworks.py  auth.py  interactions.py
src/art_forge/static/css/: style.css
src/art_forge/static/js/: main.js
src/art_forge/templates/: artwork.html  base.html  browse.html  gallery.html  index.html  login.html  register.html  upload.html
